Adds ngRedux, tassign, implememts increment visits action.

--- a/src/app/core/page-layout/side-navigation/side-navigation.component.html
+++ b/src/app/core/page-layout/side-navigation/side-navigation.component.html
@@ -30,7 +30,7 @@
 
     </ul>
     <div class="center p-20">
-      <a href="https://wrappixel.com/templates/ampleadmin/" target="_blank" class="btn btn-danger btn-block waves-effect waves-light">Upgrade to Pro</a>
+      <a (click)="incrementVisits()" class="btn btn-danger btn-block waves-effect waves-light">Upgrade to Pro</a>
     </div>
   </div>
 
