--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,7 +27,7 @@
             <li>
               <div id="sparklinedash"></div>
             </li>
-            <li class="text-right"><i class="ti-arrow-up text-success"></i> <span class="counter text-success">659</span></li>
+            <li class="text-right"><i class="ti-arrow-up text-success"></i> <span class="counter text-success">{{visits | async}}</span></li>
           </ul>
         </div>
       </div>
