--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -99,54 +99,12 @@
               </tr>
               </thead>
               <tbody>
-              <tr>
-                <td>1</td>
-                <td class="txt-oflo">Elite admin</td>
-                <td>SALE</td>
-                <td class="txt-oflo">April 18, 2017</td>
-                <td><span class="text-success">$24</span></td>
-              </tr>
-              <tr>
-                <td>2</td>
-                <td class="txt-oflo">Real Homes WP Theme</td>
-                <td>EXTENDED</td>
-                <td class="txt-oflo">April 19, 2017</td>
-                <td><span class="text-info">$1250</span></td>
-              </tr>
-              <tr>
-                <td>3</td>
-                <td class="txt-oflo">Ample Admin</td>
-                <td>EXTENDED</td>
-                <td class="txt-oflo">April 19, 2017</td>
-                <td><span class="text-info">$1250</span></td>
-              </tr>
-              <tr>
-                <td>4</td>
-                <td class="txt-oflo">Medical Pro WP Theme</td>
-                <td>TAX</td>
-                <td class="txt-oflo">April 20, 2017</td>
-                <td><span class="text-danger">-$24</span></td>
-              </tr>
-              <tr>
-                <td>5</td>
-                <td class="txt-oflo">Hosting press html</td>
-                <td>SALE</td>
-                <td class="txt-oflo">April 21, 2017</td>
-                <td><span class="text-success">$24</span></td>
-              </tr>
-              <tr>
-                <td>6</td>
-                <td class="txt-oflo">Digital Agency PSD</td>
-                <td>SALE</td>
-                <td class="txt-oflo">April 23, 2017</td>
-                <td><span class="text-danger">-$14</span></td>
-              </tr>
-              <tr>
-                <td>7</td>
-                <td class="txt-oflo">Helping Hands WP Theme</td>
-                <td>MEMBER</td>
-                <td class="txt-oflo">April 22, 2017</td>
-                <td><span class="text-success">$64</span></td>
+              <tr *ngFor="let s of sales | async; let i = index">
+                <td>{{i}}</td>
+                <td class="txt-oflo">{{s.name}}</td>
+                <td>{{s.status}}</td>
+                <td class="txt-oflo">{{s.date}}</td>
+                <td><span class="text-success">${{s.price}}</span></td>
               </tr>
               </tbody>
             </table>
